--- a/style.css
+++ b/style.css
@@ -1,8 +1,52 @@
+/* The navigation bar */
+.navbar {
+  overflow: hidden;
+  background-color: #000080;
+
+text-align: center;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+}
+
+/* Links inside the navbar */
+.navbar a {
+  float: center;
+  display: block;
+color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change background on mouse-over */
+.navbar a:hover {
+  background: #ddd;
+  color: black;
+}
+
+/* Main content */
+.main {
+  margin-top: 30px; /* Add a top margin to avoid content overlay */
+}
+
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #000080;
+  color: white;
+  text-align: center;
+}
+
+
 /* style.css file*/
 body {
     display: flex;
     justify-content: center;
-    margin: 0;
+    margin: 30px;
     padding: 0;
     height: 100vh;
     box-sizing: border-box;
